Closed Bug 1581773 Opened 5 years ago Closed 5 years ago

[Wayland] Bookmark popup panel disappears when opening a dropdown

Categories

(Core :: Widget: Gtk, defect)

70 Branch
Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox69 --- unaffected
firefox70 --- fixed
firefox71 --- fixed

People

(Reporter: ke5trel, Assigned: jhorak)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(2 files)

STR:

  1. Click the bookmark star in the location bar.
  2. In the bookmark popup panel, click the Folder dropdown.

Expected:

The dropdown appears over the parent popup.

Actual:

The parent popup disappears and the dropdown is left floating on its own. Dropdowns in extension popups are similarly affected.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=60ba89028ca86c6fddfb59009f99ccd21167f41e&tochange=a7980614bc3c528727f1b55e111654e708f1c3df

Regressed by Bug 1567434.

Thanks, this should be fixed by Bug 1580174 - can you try that on latest nightly?

Flags: needinfo?(ke5trel)

The Bug 1580174 test case permission notification dropdowns work for me on latest 2019-09-16 Nightly (parent notification popup remains visible) but the bookmark popup dropdowns still have this issue.

Flags: needinfo?(ke5trel)
See Also: → 1580174

Jan, I guess we need to expand our exception list on Wayland, correct?

Flags: needinfo?(jhorak)

(In reply to Martin Stránský [:stransky] from comment #3)

Jan, I guess we need to expand our exception list on Wayland, correct?
Yes, we do.

Flags: needinfo?(jhorak)

Pushed by btara@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/847db8b778d8
Fix disappearing bookmark edit panel when choosing folder under Wayland; r=stransky

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → jhorak

This has not fixed the extension popup case (Bug 1583035).

Summary: [Wayland] Bookmark/extension popup panels disappear when opening a dropdown → [Wayland] Bookmark popup panel disappears when opening a dropdown

Does this need a Beta approval request?

Flags: needinfo?(jhorak)

Comment on attachment 9093850 [details]
Bug 1581773 - Fix disappearing bookmark edit panel when choosing folder under Wayland; r=stransky

Beta/Release Uplift Approval Request

  • User impact if declined: Missing bookmark panel on Linux/Wayland.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Linux/Wayland only.
  • String changes made/needed:
Attachment #9093850 - Flags: approval-mozilla-beta?

Comment on attachment 9093850 [details]
Bug 1581773 - Fix disappearing bookmark edit panel when choosing folder under Wayland; r=stransky

Fix for Wayland issue, low risk, let's take this for beta 11.

Attachment #9093850 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: needinfo?(jhorak)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: