Bug 1581773 - Fix disappearing bookmark edit panel when choosing folder under Wayland; r=stransky a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D46440